fix: spacing between buttons

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
     margin-top: 5%;
 }
 
+.reach-icons p{
+    margin-top: 5%;
+}
+
 .about-button{
     margin-bottom: 10%;
 }
